# rides-coordinator-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CNAME  CONTRIBUTING.md  DESIGN.ask-rides-messages.md  DESIGN.ask-rides-schedule.md  DESIGN.locations.md  Dockerfile  PORTFOLIO.md  README.md  alembic.ini  bot.py  database.py  delete.py  deploy-frontend.sh  enums.py  index.html  locations.py  logger.py  main.py  migrate.sh  models.py  pyproject.toml  req1.txt  requirements.txt  run.sh  suggestions.md  tasks.py  test.py
alembic/: env.py  (+1 more)
backend/: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  Dockerfile.preprod  Dockerfile.prod  README.md  alembic.ini  build-and-export.sh  entrypoint.sh  main.py  pom.xml  pyproject.toml  run_api.py  tasks.py
backend/admin_ui/: index.html
backend/agent/: math_agent.py  ridebot_agent.py  thread_intent.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 11c485f67e95_.py  44f6b5bdaeef_add_user_managed_pickup_locations.py  625822b2348c_add_wednesday_pause_row.py  94e82225a623_add_ask_rides_schedules.py  9d5ff18c05ad_add_global_settings.py  a1b2c3d4e5f6_add_use_cache_feature_flag.py  a1b2c3d4e5f6_add_wednesday_pause_row.py  a7b05eb095de_initial_schema.py  a9b8c7d6e5f4_add_reactions_to_ask_rides_templates.py  a9f3e2b1c8d7_add_self_auth_tables.py  ad3a584f9daa_setup.py  b2c3d4e5f6a1_add_ride_reaction_events.py  b2c3d4e5f6a7_add_global_settings.py  b7d962687c65_merge_modmail_and_main_heads.py  bba96a621366_add_ask_rides_message_templates.py  c31a8d9eaa85_add_wednesday_drivers_feature_flag.py  c3d4e5f6a7b8_add_wednesday_drivers_feature_flag.py  c6440e6c3d0e_add_missing_tables_for_all_models.py  c7d8e9f0a1b2_add_emoji_to_non_discord_rides.py  c9f7a2b4e011_add_modmail_channels.py  cf1c49fb43ca_merge_use_cache_and_missing_tables_heads.py  d8e2f1a3b5c7_add_modmail_messages.py  d8e9f0a1b2c3_add_thread_agent_feature_flag.py  f1a2b3c4d5e6_add_message_schedule_pauses.py
backend/api/: __init__.py  app.py  auth.py  auth_session.py  constants.py  dependencies.py  rate_limit.py
backend/api/middleware/: access_logger.py
backend/api/routes/: __init__.py  admin_users.py  ask_rides.py  ask_rides_coordinator.py  auth_bypass.py  auth_discord.py  cache_stats.py  check_pickups.py  drivers.py  example.py  feature_flags.py  group_rides.py  health.py  list_pickups.py  locations.py  me.py  modmail.py  non_discord_rides.py  pickup_locations.py  reaction_log.py  reaction_log_stream.py  ride_coordinators.py  route_builder.py  user_preferences.py  usernames.py
backend/bot/: api.py
backend/bot/cogs/: README.md  __init__.py  admin.py  agent.py  ask_drivers.py  community_events.py  driver_role_monitor.py  events.py  feature_flags.py  group_rides.py  help.py  job_scheduler.py  locations.py  modmail.py  non_discord_rides.py  reactions.py  ride_coverage.py  role_monitor.py  thread_agent.py  threads.py  whois.py
backend/bot/cogs_disabled/: README.md  infra.py  retreat.py
backend/bot/cogs_testing/: test.py
backend/bot/core/: __init__.py  base.py  bot_instance.py  database.py  enums.py  error_reporter.py  lifecycle.py  logger.py  messages_broadcaster.py  models.py  reaction_broadcaster.py  reaction_enums.py  scheduler_control.py  schemas.py
backend/bot/jobs/: README.md  __init__.py  ask_drivers.py  ask_rides.py  non_discord_rides.py  sync_rides_locations.py
backend/bot/jobs_disabled/: README.md  retreat_sync_roles.py
backend/bot/repositories/: __init__.py  ask_rides_messages_repository.py  ask_rides_schedule_repository.py  auth_sessions_repository.py  calendar_repository.py  community_events_repository.py  events_repository.py  feature_flags_repository.py  global_settings_repository.py  group_rides_repository.py  locations_repository.py  message_schedule_repository.py  modmail_messages_repository.py  modmail_repository.py  non_discord_rides_repository.py  pickup_locations_repository.py  ride_coverage_repository.py  ride_reaction_events_repository.py  thread_repository.py  user_accounts_repository.py  user_preferences_repository.py  whois_repo.py  whois_repository.py
backend/bot/services/: __init__.py  admin_service.py  ask_rides_messages_service.py  ask_rides_schedule_service.py  assignment_validator.py  auth_service.py  community_events_service.py  csv_sync_service.py  driver_management_service.py  driver_service.py  events_service.py  feature_flags_service.py  fellowship_season_service.py  group_rides_service.py  help_service.py  housing_group_service.py  late_reaction_windows_service.py  llm_service.py  locations_service.py  message_schedule_service.py  modmail_service.py  modmail_ws.py  non_discord_rides_service.py  pickup_locations_service.py  reaction_logging_service.py  reaction_service.py  ride_coordinator_service.py  ride_coverage_service.py  ride_grouping.py  ride_reaction_log_service.py  ride_request_service.py  role_management_service.py  route_service.py  thread_service.py  user_accounts_service.py  user_preferences_service.py  whois_service.py
backend/bot/utils/: README.md  ask_rides_defaults.py  ask_rides_schedule_defaults.py  autocomplete.py  cache.py  cache_backends.py  channel_helpers.py  channel_whitelist.py  channels.py  checks.py  constants.py  format_message.py  locations.py  parsing.py  time_helpers.py
backend/db/: README.md
backend/deployment/: docker-compose.yaml  update-all.sh  update.sh
backend/docs/: architecture.md  caching.md  group_rides_pipeline.md
backend/evals/: HOW_IT_WORKS.md  README.md  __init__.py  gold_compare.py  run_scenario.py
backend/evals/scenarios/: basic.yaml  marshall_flex_split.yaml  marshall_flex_split_with_gold.yaml  warren_innovation_corridor.yaml
backend/scripts/: db_backup_common.py  db_export.py  db_import.py  gen_bypass_password.py  remove_dev_commands.py
backend/tests/api/: conftest.py  test_ask_rides_coordinator.py  test_ask_rides_messages.py  test_ask_rides_schedule.py  test_group_rides_rate_limit.py  test_group_rides_route.py  (+6 more)
example-backend/: README.md  pyproject.toml
example-backend/api/: app.py  dummy_data.py
(+486 files in other folders)
