[project]
name = "rides-coordinator-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ace-tools==0.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "appnope==0.1.4",
    "apscheduler==3.11.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "audioop-lts==0.2.1",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "comm==0.2.3",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "discord==2.3.2",
    "discord-py==2.5.2",
    "executing==2.2.0",
    "filetype==1.2.0",
    "frozenlist==1.6.0",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.1",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "invoke==2.2.0",
    "ipykernel==6.30.1",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "langchain-core==0.3.74",
    "langchain-google-genai==2.1.9",
    "langgraph==0.6.4",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.0",
    "langsmith==0.4.13",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "multidict==6.4.3",
    "nest-asyncio==1.6.0",
    "orjson==3.11.1",
    "ormsgpack==1.10.0",
    "packaging==25.0",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "ruff==0.11.7",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "stack-data==0.6.3",
    "tenacity==9.1.2",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzlocal==5.3.1",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zstandard==0.23.0",
]
